--- a/public/stylesheets/version-1.css
+++ b/public/stylesheets/version-1.css
@@ -16,3 +16,12 @@ label {
 	list-style-type: none;
 }
 
+input[type=text] {
+	font-size: 24px;
+	line-height: 160%;	
+	padding-left: 5px;
+}
+
+input[type=submit] {
+	font-size: 24px;
+}
