--- a/public/stylesheets/version-1.css
+++ b/public/stylesheets/version-1.css
@@ -3,7 +3,7 @@ body{
 	width: 700px;
 	margin: 0px auto;
 	font-size: 24px;
-	line-height: 160%;
+	line-height: 150%;
 	background-color: #eee;
 }
 
@@ -25,3 +25,10 @@ input[type=text] {
 input[type=submit] {
 	font-size: 24px;
 }
+
+footer {
+	border-top: 1px solid #ccc;
+	line-height: 24px;
+	font-size: 16px;
+}
+
