--- a/app/views/calculations/new.html.erb
+++ b/app/views/calculations/new.html.erb
@@ -4,7 +4,7 @@
 	<% end %>
 	<p>
 		<%= f.label :cidr_notation_range, 'Enter the impossible to decipher nerd format'%><br>
-		Looks something like: <strong>92.43.66.128/26</strong><br>
+		Should look something like: <strong>92.43.66.128/26</strong><br>
 		<%= f.text_field :cidr_notation_range %> <%= f.submit 'Calculate!' %>
 	</p>
 <% end %>
