--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
 <header>
 	<h1>Ranger</h1>
-	<p>Turn a CIDR Notation addresses into the start and end of a range.</p>
+	<p>Turn a CIDR Notation address range into some IP addresses.</p>
 </header>
 
 <%= yield %>
