--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
 
 <footer>
 	<p>Ranger is <%= link_to("A Well Informed Product", "http://wellinformed.co.uk") %>.</p>
+  <p>IP calculations handled by <%= link_to "iplogic", "https://github.com/jayferd/iplogic" %>.</p>
 	<p>Grab the <%= link_to "code at github", "https://github.com/wellinformed/Ranger" %> if you're so inclined.</p>
 </footer>
 
