--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<%= stylesheet_link_tag :all %>
+	<%= stylesheet_link_tag :application %>
 	<%= javascript_include_tag :defaults %>
 	<%= csrf_meta_tag %>
 </head>
