--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,10 @@ label {
 	list-style-type: none;
 }
 
+.result, .error-message {
+	background-color: #ffc;	
+}
+
 input[type=text] {
 	font-size: 24px;
 	line-height: 160%;	
