--- a/application.css
+++ b/application.css
@@ -1,7 +1,7 @@
 body {
   font-family: helvetica, arial, sans-serif;
-  width: 700px;
-  margin: 0px auto;
+  width: 90%;
+  margin: 10px auto;
   font-size: 24px;
   line-height: 150%;
   background-color: #eee;
@@ -29,10 +29,32 @@ input[type="text"] {
   font-size: 24px;
   line-height: 160%;
   padding-left: 5px;
+  max-width: 90%;
 }
 
 input[type="submit"] {
   font-size: 24px;
+  padding: 10px;
+}
+
+.myButton {
+  background-color: #44c767;
+  border-radius: 28px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 17px;
+  padding: 16px 31px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+.myButton:hover {
+  background-color: #5cbf2a;
+}
+.myButton:active {
+  position: relative;
+  top: 1px;
 }
 
 footer {
